[package]
name = "webrtc-unreliable-client"
version = "0.2.2"
authors = []
description = "Just enough hacks to connect a native client to a https://github.com/triplehex/webrtc-unreliable server"
workspace = ".."
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/naia-lib/webrtc-unreliable-client"

[badges]
maintenance = { status = "actively-developed" }

[features]


[dependencies]
anyhow = "1.0"
bytes = "1.1"
reqwest = { version = "0.11", features = ["rustls-tls"] }
tinyjson = { version = "2.3" }
regex = { version = "1.5" }
log = { version = "0.4" }
socket2 = { version = "0.4.2", features = ["all"] }
tokio = { version = "1.15.0", features = ["full"] }
async-trait = "0.1.52"
serde = { version = "1.0.132", features = ["derive"] }
rand = "0.8.4"
thiserror = "1.0.30"
waitgroup = "0.1.2"
url = "2.2.2"
rustls = { version = "0.19.0", features = ["dangerous_configuration"]}
rcgen = { version = "0.10.0", features = ["pem", "x509-parser"]}
ring = "0.16.20"
sha-1 = "0.9.1"
sha2 = "0.9.1"
lazy_static = "1.4.0"
crc = "2.1.0"
derive_builder = "0.10.2"
ipnet = "2.3.1"
parking_lot = "0.11.2"
serde_derive = "1.0.130"
block-modes = "0.7.0"
byteorder = "1.4.3"
aes = "0.6.0"
subtle = "2.4.1"
ccm = "0.3.0"
aes-gcm = "0.8.0"
der-parser = "8.2.0"
x509-parser = "0.15.0"
webpki = "0.21.4"
rand_core = "0.6.3"
p256 = { version = "0.11.1", features=["default", "ecdh", "ecdsa"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"]}
hmac = "0.10.1"
elliptic-curve = { version = "0.13.8", features = ["default", "ecdh", "sec1"] }
uuid = { version = "0.8.2", features = ["v4"] }
base64 = "0.13.0"

[target.'cfg(not(windows))'.dependencies]
nix = "0.23"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "basetsd",
    "guiddef",
    "ws2def",
    "winerror",
    "ws2ipdef",
] }
