[package]
name = "webrtc-unreliable-client"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]


[dependencies]
webrtc = { package = "webrtc-unreliable-client-slim", path = "../slim" }
tokio = { version = "1.15", features = ["full"] }
anyhow = "1.0"
bytes = "1.1"
reqwest = { version = "0.11", features = ["rustls-tls"] }
tinyjson = { version = "2.3" }
regex = { version = "1.5" }
log = { version = "0.4" }
