[package]
name = "webrtc-unreliable-client-old"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]

[dependencies]
webrtc = { version = "0.4", path = "../../Forks/webrtc" }
tokio = { version = "1.15", features = ["full"] }
anyhow = "1.0"
bytes = "1.1"
reqwest = { version = "0.11", features = ["rustls-tls"] }
tinyjson = { version = "2.3" }
regex = { version = "1.5" }
env_logger = { version = "0.9" }
log = { version = "0.4" }
