[package]
name = "webrtc_proxy"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
use_old = [ "webrtc-unreliable-client-old" ]
use_new = [ "webrtc-unreliable-client" ]

[dependencies]
webrtc-unreliable-client = { path = "../client", optional = true }
webrtc-unreliable-client-old = { path = "../old_client", optional = true }
cfg-if = { version = "1.0" }
