[package]
name = "webrtc-unreliable-client-shared"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]

[dependencies]
tokio = { version = "1.15", features = ["full"] }
regex = { version = "1.5" }
