[package]
name = "webrtc-unreliable-client-slim"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
log = "0.4.14"
async-trait = "0.1.52"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
rand = "0.8.4"
bytes = "1.1.0"
thiserror = "1.0.30"
waitgroup = "0.1.2"
regex = "1.5.4"
url = "2.2.2"
rustls = { version = "0.19.0", features = ["dangerous_configuration"]}
rcgen = { version = "0.8.14", features = ["pem", "x509-parser"]}
ring = "0.16.20"
sha2 = "0.10.1"
lazy_static = "1.4.0"
hex = "0.4.3"

