[package]
name = "webrtc-unreliable-client-slim"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = ".."
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]

[dependencies]
sdp = { version = "0.5.1", path = "../../Forks/sdp" }
mdns = { package = "webrtc-mdns", version = "0.4.2", path = "../../Forks/mdns" }
stun = { version = "0.4.2", path = "../../Forks/stun" }
turn = { version = "0.5.4", path = "../../Forks/turn" }

tokio = { version = "1.15.0", features = ["full"] }
log = "0.4.14"
async-trait = "0.1.52"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
rand = "0.8.4"
bytes = "1.1.0"
thiserror = "1.0.30"
waitgroup = "0.1.2"
regex = "1.5.4"
url = "2.2.2"
rustls = { version = "0.19.0", features = ["dangerous_configuration"]}
rcgen = { version = "0.8.14", features = ["pem", "x509-parser"]}
ring = "0.16.20"
sha-1 = "0.9.1"
sha2 = "0.9.1"
lazy_static = "1.4.0"
hex = "0.4.3"
crc = "2.1.0"
derive_builder = "0.10.2"
ipnet = "2.3.1"
parking_lot = "0.11.2"
serde_derive = "1.0.130"
block-modes = "0.7.0"
byteorder = "1.4.3"
aes = "0.6.0"
subtle = "2.4.1"
ccm = "0.3.0"
aes-gcm = "0.8.0"
der-parser = "5.0"
x509-parser = "0.9"
webpki = "0.21.4"
rand_core = "0.6.3"
p256 = { version = "0.10", features=["default", "ecdh", "ecdsa"] }
x25519-dalek = "2.0.0-pre.1"
hmac = "0.10.1"
elliptic-curve = { version = "0.11.12", features = ["default", "ecdh"] }
bincode = "1.3.3"
uuid = { version = "0.8.2", features = ["v4"] }

[target.'cfg(not(windows))'.dependencies]
nix = "0.23"