[package]
name = "demo-client"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[features]
use_old = [ "webrtc-unreliable-client/use_old" ]
use_new = [ "webrtc-unreliable-client/use_new" ]

[dependencies]
webrtc-unreliable-client = { package = "webrtc_proxy", path = "../../proxy" }
tokio = { version = "1.15", features = ["full"] }
anyhow = "1.0"
env_logger = { version = "0.9" }
log = { version = "0.4" }
