[package]
name = "demo-server"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[features]

[dependencies]
naia-server-socket = { path = "../../../naia/socket/server", features = [ "use-webrtc" ] } # version = "0.10",
naia-socket-shared = { path = "../../../naia/socket/shared" } # version = "0.10"
log = "0.4"
simple_logger = { version = "=2.0.0" }